@@ -13,10 +13,12 @@ AUX ruby19-rubygems-proxy.patch 407 RMD160 0bfedce42f4879d729b8de650f99a345faaa7
 DIST ruby-1.8.6-p369.tar.bz2 3981771 RMD160 34d2763fd7b24c5883eaea457b871708d20c51e8 SHA1 d121f84b1b264f3a72878797222852b272a099fd SHA256 fb6974ab8a0de52511e846eacf113432b5227a867e3c9741d65775f162e13715
 DIST ruby-1.8.7-p174.tar.bz2 4144807 RMD160 f854d456003af1e31d50330c88c3cb152c434249 SHA1 9e84b49ad545ad54b8e7dc3c227eaaefeb1041aa SHA256 203978b6db1cc77a79ff03d141d162f6f17d86c3574f76de9eae9d0c8cb920bc
 DIST ruby-1.9.1-p129.tar.bz2 7183891 RMD160 570f567508f9a4ee41e7983ab0a399cbd1a47b8a SHA1 4e36be3bea89c17e2c7e908d5b18bf6071cc91c0 SHA256 cb730f035aec0e3ac104d23d27a79aa9625fdeb115dae2295de65355f449ce27
+DIST ruby-1.9.1-p243.tar.bz2 7191348 RMD160 3af130d692f9813501ccc570d6492b8003b1e6f9 SHA1 f9ec27a17d4f2f5be000d1bd46170344be0b6dfb SHA256 39c9850841c0dd5d368f96b854f97c19b21eb28a02200f8b4e151f608092e687
 DIST ruby-patches-1.8.7_p174.tar.bz2 1255 RMD160 2070ae0a6650331b91bf0f2a3b694a4d1837391f SHA1 f9caa7237c79ab9644c8432665bffaabda407ed3 SHA256 63cb9753737658e7983b7a306be353635085d6966ce94afebfd7ed9b2a3b1fa7
 EBUILD ruby-1.8.6_p369.ebuild 5427 RMD160 c6104f669da04975fdd8c611f05e49352b4445da SHA1 45f53238f2bd5fec0cbdd23be204022930d29f0b SHA256 6bc5f207702ede7cd9452fc584e99fec9f37ef7bcca37ded61195fc266731f37
 EBUILD ruby-1.8.7_p174.ebuild 5364 RMD160 789658363e9acb34e628e941fbf0ad1f87f169aa SHA1 6dd334c8dd8191f0e7fe49692f960e8f9d62dce7 SHA256 f742994bd3a3b7f02ef9947d8a03ea74fe831c648cdd4ddea827d352258b85b9
 EBUILD ruby-1.9.1_p129-r1.ebuild 5716 RMD160 83bde30b0b256a079cea5347f62c5d099d2e3d91 SHA1 c5d184aaeefd21f0a850703e4c215ffc0327d1e2 SHA256 dea7d6c7c4106c79eb5fcab3733e387511b3a50b4341886fb19e606690c437f4
 EBUILD ruby-1.9.1_p129.ebuild 5538 RMD160 b8608e8b5287de43ef6f1996270d1d2cccd95ac7 SHA1 77e713a450b68d10ddbebd1cf7d967da95068255 SHA256 8c1c213d9cb537b3428db51653ea50f3e42810359f53d0fd9fed7d378f368872
-MISC ChangeLog 64421 RMD160 b10068e833da1454f38078e1307de2cc3810c185 SHA1 f4dc742da7702cd5d26ea010279d407946d437fc SHA256 ba6ad6d4c7ac64be11269bd4ed4220249940435471eebd690374a06e731c2dc4
+EBUILD ruby-1.9.1_p243.ebuild 5394 RMD160 27bdb0dd9d7d711d706173875ea5d8e819915edf SHA1 066ec737d09106c02da717e1d3ca65099fb3cbc0 SHA256 2d87b82ee82c721fa9817a44a6cc7304262096db12f4c24b3362967d9205cb2d
+MISC ChangeLog 64587 RMD160 eed6f8b80c8d2e0800badbceb868cea5845151ac SHA1 0ca5336d4d1ba956c14e9311514f6b4bf9cdb1a8 SHA256 2b4d2cff5dcda07eeef77be0a9d93d45d9ecec82dfe82834b411cb324aee5fca
 MISC metadata.xml 264 RMD160 431f9cb912904a43270caa28a6811a717d8a954e SHA1 9f11bb2cd7f7c1b586abf2b3d7a15b9156ed5bf8 SHA256 18838bb6849b82154fd830eb56e098c356421ac47e902ed33a886e26354d027b
