@@ -1,0 +1,22 @@
+berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) ssl? ( dev-libs/openssl ) socks5? ( >=net-proxy/dante-1.1.13 ) tk? ( dev-lang/tk[threads] ) >=app-admin/eselect-ruby-20090723 !=dev-lang/ruby-cvs-1.9* !<dev-ruby/rdoc-2 !dev-ruby/rexml =sys-devel/automake-1.10* >=sys-devel/autoconf-2.61 sys-devel/libtool
+berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) ssl? ( dev-libs/openssl ) socks5? ( >=net-proxy/dante-1.1.13 ) tk? ( dev-lang/tk[threads] ) >=app-admin/eselect-ruby-20090723 !=dev-lang/ruby-cvs-1.9* !<dev-ruby/rdoc-2 !dev-ruby/rexml
+1.9
+mirror://ruby/ruby-1.9.1-p243.tar.bz2
+
+http://www.ruby-lang.org/
+|| ( Ruby GPL-2 )
+An object-oriented scripting language
+~amd64 ~x86 ~x86-fbsd
+autotools eutils flag-o-matic libtool multilib portability toolchain-funcs versionator
+berkdb debug +doc emacs examples gdbm ipv6 rubytests socks5 ssl tk xemacs
+
+emacs? ( app-emacs/ruby-mode ) xemacs? ( app-xemacs/ruby-modes )
+virtual/ruby
+2
+
+compile configure install postinst postrm prepare setup test
+
+
+
+
+
