@@ -1,3 +1,6 @@
+#quick temp mask - unmask soon
+>=dev-lang/ruby-1.9.1_p243
+
 # See Gentoo bug 277382:
 
 >=sys-apps/busybox-1.14
