@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.418 2009/06/28 21:31:34 a3li Exp $
 
+*ruby-1.9.1_p243 (23 Jul 2009)
+
+  23 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +ruby-1.9.1_p243.ebuild:
+  new ebuild, masked temporarily, will unmask in a bit.
+
 *ruby-1.9.1_p129-r1 (23 Jul 2009)
 
   23 Jul 2009; Daniel Robbins <drobbins@funtoo.org> ruby-1.9.1_p129-r1.ebuild:
